启动报错 stream tolist（）