@@ -30,7 +30,7 @@ public class CollectionUtils {
         if (CollUtil.isEmpty(from)) {
             return new ArrayList<>();
         }
-        return from.stream().filter(predicate).toList();
+        return from.stream().filter(predicate).collect(Collectors.toList());
     }
 
     public static <T, R> List<T> distinct(Collection<T> from, Function<T, R> keyMapper) {
@@ -51,14 +51,14 @@ public class CollectionUtils {
         if (CollUtil.isEmpty(from)) {
             return new ArrayList<>();
         }
-        return from.stream().map(func).filter(Objects::nonNull).toList();
+        return from.stream().map(func).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
     public static <T, U> List<U> convertList(Collection<T> from, Function<T, U> func, Predicate<T> filter) {
         if (CollUtil.isEmpty(from)) {
             return new ArrayList<>();
         }
-        return from.stream().filter(filter).map(func).filter(Objects::nonNull).toList();
+        return from.stream().filter(filter).map(func).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
     public static <T, U> Set<U> convertSet(Collection<T> from, Function<T, U> func) {
